frame/support/test/tests/pallet_ui/storage_invalid_rename_value.stderr
error: `pub` is not a valid identifier
  --> $DIR/storage_invalid_rename_value.rs:13:29
   |
13 |     #[pallet::storage_prefix = "pub"]
   |                                ^^^^^
