frame/support/test/tests/pallet_ui/storage_invalid_rename_value.rs
#[frame_support::pallet]
mod pallet {
	use frame_support::pallet_prelude::Hooks;
	use frame_system::pallet_prelude::BlockNumberFor;

	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet<T>(core::marker::PhantomData<T>);

	#[pallet::storage]
	#[pallet::storage_prefix = "pub"]
	type Foo<T> = StorageValue<_, u8>;
}

fn main() {
}
